Update resource pack api, now with a way to create typed item asset definitions on the fly, update to pre3